--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -8,14 +8,10 @@
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:background="@color/black"
         android:clickable="true"
-        android:columnWidth="100dp"
         android:drawSelectorOnTop="true"
-        android:focusable="true"
         android:gravity="center"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="5dp" />
+        android:numColumns="auto_fit" />
 
 </FrameLayout>
