--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,13 +48,18 @@
                         android:id="@+id/release_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/average"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@color/white" />
+
                 </LinearLayout>
 
             </LinearLayout>
