--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -60,6 +60,12 @@
                         android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@color/white" />
 
+                    <ImageButton
+                        android:id="@+id/favorite_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/favorite_button_selector" />
+
                 </LinearLayout>
 
             </LinearLayout>
