--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_gray">#7777</color>
     <color name="grey">#333333</color>
     <color name="dark_grey">#222222</color>
     <color name="very_dark_grey">#111111</color>
