--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="title_size">48sp</dimen>
     <dimen name="trailer_list_item_padding">4dp</dimen>
+    <dimen name="card_view_elevation">10dp</dimen>
+    <dimen name="card_view_height">72dp</dimen>
+    <dimen name="card_view_margin">2dp</dimen>
+    <dimen name="card_view_width">58dp</dimen>
 </resources>
