--- a/app/src/main/res/layout-land/fragment_detail.xml
+++ b/app/src/main/res/layout-land/fragment_detail.xml
@@ -19,9 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/detail_fragment_margin"
+                android:paddingRight="@dimen/detail_fragment_margin"
+                android:paddingStart="@dimen/detail_fragment_margin"
                 android:textColor="@color/white"
                 android:textSize="@dimen/title_size" />
 
@@ -29,21 +29,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/detail_fragment_margin"
+                android:paddingRight="@dimen/detail_fragment_margin"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
                 <ImageView
                     android:id="@+id/movie_image"
-                    android:layout_width="@dimen/movie_poster_width"
-                    android:layout_height="@dimen/movie_poster_height" />
+                    android:layout_width="185dp"
+                    android:layout_height="277dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/activity_horizontal_margin">
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingStart="@dimen/activity_horizontal_margin">
 
                     <TextView
                         android:id="@+id/release_date"
@@ -88,7 +90,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:paddingLeft="16dp"
+                android:paddingLeft="@dimen/detail_fragment_margin"
+                android:paddingStart="@dimen/detail_fragment_margin"
                 android:text="@string/trailers"
                 android:textColor="@color/white"
                 android:visibility="gone" />
@@ -103,7 +106,7 @@
                 android:id="@+id/review_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_margin="@dimen/detail_fragment_margin"
                 android:orientation="vertical">
 
                 <TextView
@@ -118,5 +121,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
