--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="@dimen/trailer_list_item_padding"
+    android:layout_marginLeft="@dimen/detail_fragment_margin"
+    android:layout_marginStart="@dimen/detail_fragment_margin"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -33,9 +34,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@color/white" />
-
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
