--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="card_view_height">72dp</dimen>
     <dimen name="card_view_margin">2dp</dimen>
     <dimen name="card_view_width">58dp</dimen>
+    <dimen name="detail_fragment_margin">16dp</dimen>
+    <dimen name="movie_poster_width">185dp</dimen>
+    <dimen name="movie_poster_height">277dp</dimen>
 </resources>
