--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <GridView
-        android:id="@+id/gridview"
+        android:id="@+id/grid_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/black"
@@ -13,5 +14,20 @@
         android:drawSelectorOnTop="true"
         android:gravity="center"
         android:numColumns="auto_fit" />
+
+    <TextView
+        android:id="@+id/empty_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="@string/grid_view_error_no_connection"
+        app:layout_anchor="@id/grid_view"
+        app:layout_anchorGravity="fill" />
 
 </FrameLayout>
