--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -1,4 +1,7 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/poster"
-    android:layout_width="185dp"
-    android:layout_height="277dp" />
+    android:layout_width="wrap_content"
+    android:layout_height="@dimen/movie_poster_height"
+    android:layout_weight="1"
+    android:adjustViewBounds="true"
+    android:scaleType="fitStart" />
