--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
@@ -18,12 +19,16 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingStart="@dimen/activity_horizontal_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@color/white"
-                android:textSize="@dimen/title_size" />
+                android:textSize="@dimen/title_size"
+                tools:text="TITLE" />
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -50,7 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:textAppearance="?android:textAppearanceSmall"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textColor="@color/white" />
 
                     <TextView
@@ -58,7 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:textAppearance="?android:textAppearanceSmall"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textColor="@color/white" />
 
                     <ImageButton
