--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:elevation="@dimen/card_view_elevation"
-        card_view:cardBackgroundColor="@color/light_gray"
+        card_view:cardBackgroundColor="@color/colorPrimaryLight"
         card_view:cardCornerRadius="8dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
