--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryLight"
+    android:background="@color/light_orange"
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout
@@ -17,9 +17,9 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="?attr/actionBarSize" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -27,7 +27,7 @@
             android:id="@+id/grid_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryLight"
+            android:background="@color/light_orange"
             android:clickable="true"
             android:columnWidth="@dimen/movie_poster_width"
             android:drawSelectorOnTop="true"
