--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:elevation="@dimen/card_view_elevation"
-        card_view:cardBackgroundColor="@color/colorPrimaryLight"
+        card_view:cardBackgroundColor="@color/white"
         card_view:cardCornerRadius="8dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
