--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff9800</color>
-    <color name="colorPrimaryDark">#ef6c00</color>
-    <color name="colorPrimaryLight">#ffe0b2</color>
-    <color name="colorAccent">#448aff</color>
+    <color name="colorPrimary">#e53935</color>
+    <color name="colorPrimaryDark">#c62828</color>
+    <color name="colorPrimaryLight">#ffcdd2</color>
+    <color name="colorAccent">#ffd600</color>
+
+    <color name="light_orange">#ffecb3</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
@@ -11,5 +13,7 @@
     <color name="grey">#333333</color>
     <color name="dark_grey">#222222</color>
     <color name="very_dark_grey">#111111</color>
+
+    <color name="black_semi_transparent">#B2000000</color>
 
 </resources>
