--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,45 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/movie_list_fragment"
-        android:name="com.example.gziolle.popmovies.MovieListFragment"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <fragment
+            android:id="@+id/movie_list_fragment"
+            android:name="com.example.gziolle.popmovies.MovieListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.example.gziolle.popmovies.MovieListFragment" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_drawer_list"
+        android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
-        tools:context="com.example.gziolle.popmovies.MovieListFragment"
-        tools:layout="@android:layout/list_content" />
-</LinearLayout>
+        android:layout_gravity="start"
+        android:background="@color/off_white"
+        android:dividerHeight="0dp"
+        app:headerLayout="@layout/navigation_header"
+        app:itemIconTint="@color/black_semi_transparent"
+        app:itemTextColor="@color/black_semi_transparent"
+        app:menu="@menu/drawer_menu" />
+</android.support.v4.widget.DrawerLayout>
