--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="title_size">36sp</dimen>
     <dimen name="trailer_list_item_padding">4dp</dimen>
     <dimen name="card_view_elevation">10dp</dimen>
@@ -16,4 +17,12 @@
 
     <dimen name="detail_poster_width">250dp</dimen>
     <dimen name="detail_poster_appbar_height">250dp</dimen>
+
+    <dimen name="design_navigation_icon_size" tools:override="true">40dp</dimen>
+
+    <dimen name="navigation_drawer_width">300dp</dimen>
+    <dimen name="navigation_header_height">200dp</dimen>
+
+    <dimen name="header_icon_size">64dp</dimen>
+    <dimen name="dialog_margin">8dp</dimen>
 </resources>
