--- a/app/src/main/res/layout/detail_info_grid.xml
+++ b/app/src/main/res/layout/detail_info_grid.xml
@@ -1,6 +1,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detail_info_grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
