--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,11 +6,13 @@
     android:background="@color/light_orange">
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/detail_coordinator_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:transitionGroup="false">
 
         <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar"
+            android:id="@+id/detail_app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -19,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:collapsedTitleTextAppearance="@style/CollapsedToolbarTextStyle"
-                app:contentScrim="?attr/colorPrimary"
+                app:contentScrim="@android:color/transparent"
                 app:expandedTitleGravity="center_horizontal|bottom"
                 app:expandedTitleMarginBottom="@dimen/activity_vertical_margin"
                 app:expandedTitleTextAppearance="@style/ExpandedToolbarTextStyle"
@@ -30,9 +32,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/detail_poster_appbar_height"
                     android:scaleType="centerCrop"
+                    android:transitionName="@string/transition_poster"
                     app:layout_collapseMode="parallax" />
 
                 <View
+                    android:id="@+id/gradient_view"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:layout_gravity="bottom"
@@ -42,6 +46,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
+                    android:background="@android:color/transparent"
                     android:paddingTop="24dp"
                     app:layout_collapseMode="pin" />
 
@@ -50,11 +55,14 @@
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="invisible"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
+                android:id="@+id/scroll_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
